--- a/parent/sp-service-payment8001provider/pom.xml
+++ b/parent/sp-service-payment8001provider/pom.xml
@@ -75,6 +75,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.4.6</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
